# ocaml_effect_practice

example/: deep_example.ml  dune
src/: constant_input.ml  dune  effect_practice.ml  life_game.ml  reversed_output.ml
src/lib/: cli.ml  dune
