(executable
 (name main)
 (modules main)
 (public_name main))

(executable
 (name life_game)
 (modules life_game)
 (libraries lib)
 (public_name life_game))

(executable
 (name effect_practice)
 (modules effect_practice)
 (public_name effect_practice))

(executable
 (name reversed_output)
 (modules reversed_output)
 (public_name reversed_output))