(executable
 (name main)
 (modules main)
 (public_name main))

(executable
 (name life_game)
 (modules life_game)
 (libraries lib)
 (public_name life_game))

(executable
 (name constant_input)
 (modules constant_input)
 (public_name constant_input))

(executable
 (name reversed_output)
 (modules reversed_output)
 (public_name reversed_output))